2008-01-14  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsdaemon.c:
	Don't translate g_warning strings

2008-01-14  Alexander Larsson  <alexl@redhat.com>

        * client/httpuri.c:
        (http_from_uri):
	Only set "ssl" key in dav case.
	
2008-01-14  Alexander Larsson  <alexl@redhat.com>

        * client/httpuri.c:
        (http_to_uri_scheme):
	Fix some crashes
	
2008-01-13  Dan Winship  <danw@gnome.org>

	* client/httpuri.c (http_from_uri): fix

	* daemon/soup-output-stream.c: Initial SoupOutputStream; still
	works like gnome-vfs http did, by storing all the writes in memory
	until close.

	* daemon/gvfsbackendhttp.c (try_create, try_replace): Implement.
	For now we need to do HEAD-then-PUT, but we may later be able to
	do a single PUT with "Expect: 100-continue".
	(try_write, try_close_write): Implement.

2008-01-13  Christian Kellner <gicmo@gnome.org>

	* client/httpuri.c: 
	Also handle dav uris in the http mapper.

	* daemon/dav.mount.in:
	* daemon/Makefile.am:
	Add the new dav backend.

	* daemon/gvfsbackendhttp.c: 
	* daemon/gvfsbackendhttp.h:
	Implement a utility function so dav and http
	backend can share uri from filename creation.

	* daemon/gvfsbackenddav.c: 
	First attempt to write the dav backend as a subclass of http.
	Mount, QueryInfo, Enumerate should work and Read is provided
	by the base class.

2008-01-12  Leonid Kanter <leon@asplinux.ru>

	* configure.ac: Added "ru" (Russian) to ALL_LINGUAS.

2008-01-12  Alexander Larsson  <alexl@redhat.com>

        * daemon/Makefile.am:
	Set the http daemon dbus busname so that multiple mounts
	work in the same process.

2008-01-11  Dan Winship  <danw@gnome.org>

	* daemon/soup-input-stream.c: implement GSeekable (a bit hackishly
	due to a bug in libsoup 2.2.x)

	* daemon/gvfsbackendhttp.c (try_seek_on_read): implement

2008-01-11  Dan Winship  <danw@gnome.org>

	* daemon/gvfsbackendhttp.c (g_vfs_backend_http_finalize): cleanup
	(g_vfs_backend_http_init): move session creation here. Don't