@@ -1,5 +1,11 @@
 2008-01-14  Alexander Larsson  <alexl@redhat.com>
 
+        * client/gdaemonfile.c:
+        (match_prefix):
+	Handle root correctly in g_file_get_relative_path (#508719)
+
+2008-01-14  Alexander Larsson  <alexl@redhat.com>
+
         * daemon/gvfsdaemon.c:
 	Don't translate g_warning strings
 
